<!DOCTYPE xml>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://robobinding.org/android"
    android:id="@+id/MainScrollView"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".PatronInsertActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="786dp"
        android:fitsSystemWindows="false" >

        <EditText
            android:id="@+id/FirstnameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:hint="@string/firstname_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:width="170dp"
            bind:text="${firstname}" />

        <EditText
            android:id="@+id/LastnameTextview"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/FirstnameTextView"
            android:layout_toRightOf="@+id/FirstnameTextView"
            android:ems="10"
            android:hint="@string/lastname_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            bind:text="${lastname}" />

        <Button
            android:id="@+id/AdressInputButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/FirstnameTextView"
            android:text="@string/AddressButtonText" />

        <RelativeLayout
            android:id="@+id/AddressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/AdressInputButton"
            android:orientation="vertical"
            android:visibility="gone" >

            <EditText
                android:id="@+id/StreetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/street_input_hint"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"
                bind:text="${street}" />

            <EditText
                android:id="@+id/PostalCodeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/StreetTextView"
                android:layout_alignStart="@+id/StreetTextView"
                android:layout_below="@+id/StreetTextView"
                android:ems="10"
                android:hint="@string/plz_input_hint"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress|number"
                android:maxLength="@integer/plz_max_length"
                android:width="100dp"
                bind:text="${postalcode}" />

            <EditText
                android:id="@+id/CityEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/PhoneEditText"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/PostalCodeEditText"
                android:layout_toRightOf="@+id/PostalCodeEditText"
                android:ems="10"
                android:hint="@string/city_input_hint"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"
                bind:text="${city}" />

            <EditText
                android:id="@+id/PhoneEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/PostalCodeEditText"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/PostalCodeEditText"
                android:layout_below="@+id/PostalCodeEditText"
                android:ems="10"
                android:hint="@string/phone_input_hint"
                android:inputType="phone"
                bind:text="${telefonnumber}" />

            <EditText
                android:id="@+id/BirthdayLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/PhoneEditText"
                android:layout_alignStart="@+id/PhoneEditText"
                android:layout_below="@+id/PhoneEditText"
                android:ems="10"
                android:hint="@string/birthday"
                android:imeOptions="actionNext"
                android:inputType="date"
                bind:text="${patronBirthdate}" />

            <EditText
                android:id="@+id/DistanceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/PhoneEditText"
                android:layout_alignStart="@+id/PhoneEditText"
                android:layout_below="@+id/BirthdayLabelTextView"
                android:ems="10"
                android:hint="@string/distance_hint"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                bind:text="${distancetooffice}" />
        </RelativeLayout>

        <Button
            android:id="@+id/InsuranceInputButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/AddressLayout"
            android:text="@string/InsuranceButtonText" />

        <RelativeLayout
            android:id="@+id/InsuranceLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/InsuranceInputButton"
            android:orientation="vertical"
            android:visibility="gone" >

            <EditText
                android:id="@+id/IkInsuranceHolderEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/ik_insurance_holder_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:width="100dp"
                bind:text="${insurancenumber}"  />

            <AutoCompleteTextView
                android:id="@+id/IkInsuranceAgencyAutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/IkInsuranceHolderEditText"
                android:ems="10"
                android:hint="@string/insurance_hint"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <TextView
                android:id="@+id/InsuranceDataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/IkInsuranceAgencyAutoCompleteTextView"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:textAppearance="?android:attr/textAppearanceSmall"
                bind:text="{insuranceName}" />

            <EditText
                android:id="@+id/IkInsuranceValidUntilEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/InsuranceDataTextView"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/Insurance_valid_until_hint"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:width="150dp"
                bind:text="${insurancevaliduntil}"  />

            <Spinner
                android:id="@+id/InsuranceStatusSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/InsuranceDataTextView"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/IkInsuranceValidUntilEditText"
                android:layout_toRightOf="@+id/IkInsuranceValidUntilEditText"
                android:imeOptions="actionNext" 
                android:spinnerMode="dialog"
                bind:itemLayout="@android:layout/simple_spinner_item"
                bind:dropdownLayout="@layout/string_item_layout1"
                bind:itemMapping="[text1.text:{value}]"
                bind:source="{insuranceStatuses}"
                bind:onItemSelected="insuranceStatusSelected" />
        </RelativeLayout>

        <Button
            android:id="@+id/ChildBirthInputButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/InsuranceLayout"
            android:text="@string/ChildBirthInputButtonText" />

        <RelativeLayout
            android:id="@+id/BirthInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ChildBirthInputButton"
            android:orientation="vertical"
            android:visibility="gone" >

            <EditText
                android:id="@+id/ChildBirthLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/BirthInputLayout"
                android:ems="10"
                android:hint="@string/birthday"
                android:imeOptions="actionNext"
                android:inputType="date"
                bind:text="${childBirthdate}" />

            <EditText
                android:id="@+id/TimeOfBirthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/ChildBirthLabelTextView"
                android:ems="10"
                android:hint="@string/time_of_birth_hint"
                android:imeOptions="actionNext"
                android:inputType="time"
                bind:text="{childTimeOfBirth}" >
            </EditText>

            <RadioGroup
                android:id="@+id/TypeOfBirthdateRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ChildBirthLabelTextView"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/rbCalculatedBirthdateOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/BirthInputLayout"
                    android:imeOptions="actionNext"
                    android:tag="TypeOfBirthdate"
                    android:text="@string/calculated_birthdate_text"
                    bind:onClick="calculatedBirthdateSelected"
                    bind:checked="{calcualtedBirthdate}" />

                <RadioButton
                    android:id="@+id/rbTrueBirthdateOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/rbCalculatedBirthdateOption"
                    android:layout_alignBottom="@+id/rbCalculatedBirthdateOption"
                    android:layout_toRightOf="@+id/rbCalculatedBirthdateOption"
                    android:contentDescription="TypeOfBirthdate"
                    android:tag="TypeOfBirthdate"
                    android:text="@string/true_birthdate_text" 
                    bind:onClick="trueBirthdateSelected"
                    bind:checked="{trueBirthdate}" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spNumberOfChildrenBorn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ChildBirthLabelTextView"
                android:layout_toLeftOf="@+id/TypeOfBirthdateRadioGroup"
                android:ems="10"
                android:entries="@array/number_of_children_texts"
                android:hint="@string/insurance_status_hint"
                android:imeOptions="actionNext"
                bind:itemLayout="@android:layout/simple_spinner_item"
                bind:dropdownLayout="@layout/string_item_layout1"
                bind:itemMapping="[text1.text:{value}]"
                bind:source="{numberOfChildren}"
                bind:onItemSelected="numberOfChildrenSelected" />
        </RelativeLayout>

        <Button
            android:id="@+id/SavePatronButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/FirstnameTextView"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/FirstnameTextView"
            android:layout_below="@+id/BirthInputLayout"
            android:onClick="savePatron"
            android:text="@string/save_patron_button_text"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnAbort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/SavePatronButton"
            android:layout_alignBottom="@+id/SavePatronButton"
            android:layout_alignLeft="@+id/LastnameTextview"
            android:layout_alignParentRight="true"
            android:text="Abbrechen" />
    </RelativeLayout>

</ScrollView>